--- a/CapitalPlacement.Assessment.API/CapitalPlacement.Assessment.API.csproj
+++ b/CapitalPlacement.Assessment.API/CapitalPlacement.Assessment.API.csproj
@@ -7,10 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.4" />
     <PackageReference Include="Serilog" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CapitalPlacement.Assessment.DataAccess\CapitalPlacement.Assessment.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
