--- a/CapitalPlacement.Assessment.DataAccess/CapitalPlacement.Assessment.DataAccess.csproj
+++ b/CapitalPlacement.Assessment.DataAccess/CapitalPlacement.Assessment.DataAccess.csproj
@@ -7,14 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Utility\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CapitalPlacement.Assessment.Model\CapitalPlacement.Assessment.Model.csproj" />
   </ItemGroup>
 
 </Project>
