--- a/CapitalPlacement.Assessment.Model/CapitalPlacement.Assessment.Model.csproj
+++ b/CapitalPlacement.Assessment.Model/CapitalPlacement.Assessment.Model.csproj
@@ -7,4 +7,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+  </ItemGroup>
+
 </Project>
